@@ -1990,7 +1990,7 @@ ptp_render_property_value(PTPParams* params, uint16_t dpc,
 		PTP_VAL_BOOL(PTP_DPC_NIKON_D5FileNumberSequence),
 		PTP_VAL_BOOL(PTP_DPC_NIKON_ChangeMainSub),
 		PTP_VAL_RBOOL(PTP_DPC_NIKON_F7NoCFCard),
-		PTP_VAL_BOOL(PTP_DPC_NIKON_AutoImageRotation),
+		PTP_VAL_RBOOL(PTP_DPC_NIKON_AutoImageRotation),
 		PTP_VAL_BOOL(PTP_DPC_NIKON_ExposureBracketingOnOff),
 		{PTP_DPC_NIKON_AutofocusLCDTopMode3AndMode4, 0, N_("Centre")},
 		{PTP_DPC_NIKON_AutofocusLCDTopMode3AndMode4, 1, N_("Top")},
